# PyMeshDecimation

./: .gitignore  QuadricDecimation.py  QuadricDecimation_numba.py  README.md  Untitled-1.ipynb  numba_numpy_running_time.py  pyproject.toml  reinstall.sh  setup.py  test.sh  test_initialization.py
.github/workflows/: build_wheels.yml
benchmark/: benchmark.py  bunny.vtk  cow.vtk  draft.py
data/: points.npy  triangles.npy
examples/: compare_running_times.py  fqmr_pmd.py  replay_decimation.py  visualization.py
old/: _decimation.c
pyDecimation/cython/: __init__.py  _decimation.c
pyDecimation/cython/decimation/: cdecimation.c  cdecimation.pyx  decimation.c  decimation.html  decimation_numba.py  script.py  setup.py  write_det.py
pyDecimation/cython/test/: helloworld.c  helloworld.pyx
pyDecimation/numba/: __init__.py  decimation_numba.py
pymeshdecimation/: __init__.py  decimation.py
pymeshdecimation/cython/: Rectangle.cpp  Rectangle.h  Rectangle.pxd  __init__.py  _decimation.c  _decimation.cpp  _decimation.pyx
pymeshdecimation/numba/: _decimation.py
test/: test_consistency.py  test_replay.py
