[project]
name = "pyDecimation"
description = "Mesh decimation in python"
version = "0.0.1"
authors = [
    { name = "Louis Pujol" }
]
dependencies = [
    "numpy",
    "numba",
]


[build-system]
requires = ["numpy", "numba", "cython", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"



[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = "pp*"
CIBW_ARCHS_LINUX: "native"
# Skip CPython 3.6 and CPython 3.7
CIBW_SKIP: cp36-* cp37-*