[project]
name = "pymeshdecimation"
description = "Mesh decimation in python"
version = "0.0.1a"
authors = [
    { name = "Louis Pujol" }
]
dependencies = [
    "numpy",
    "numba",
]


[build-system]
requires = ["numpy", "numba", "cython", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = ["pp*", "cp36-*", "cp37-*", "*-musllinux*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]